# Advanced-Programming-Project--Netflix-Clone-

./: README.md
AP-assignment1/: .gitignore  CMakeLists.txt  Dockerfile  README.md
AP-assignment1/data/: test.txt
AP-assignment1/src/: AddMovieCommand.cpp  AddMovieCommand.h  App.cpp  ConsoleMenu.cpp  ConsoleMenu.h  DisplayRecommendedMoviesCommand.cpp  DisplayRecommendedMoviesCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  IMenu.h  Utils.cpp  Utils.h
AP-assignment1/src/tests/: ConsoleMenuTest.cpp  test_utils.cpp
AP-assignment2/: README.md  docker-compose.yml
AP-assignment2/client/: Dockerfile  client.py
AP-assignment2/cpp_server/: CMakeLists.txt  Dockerfile
AP-assignment2/cpp_server/data/: commandsHistory.txt  movies.txt
AP-assignment2/cpp_server/src/: AddMovieCommand.cpp  AddMovieCommand.h  App.h  ConsoleMenu.cpp  ConsoleMenu.h  DeleteCommand.cpp  DeleteCommand.h  DisplayRecommendedMoviesCommand.cpp  DisplayRecommendedMoviesCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  Utils.cpp  Utils.h
AP-assignment2/cpp_server/src/tests/: test_input.txt  test_utils.cpp
AP-assignment2/data/: commandsHistory.txt
AP-assignment3/: README.md
